<resources>
    <string name="app_name">فروشگاه ارینب</string>
    <string name="no_connection">No Connection</string>
    <string name="time_out">Time Out</string>
    <string name="pleaseـwait">لطفا منتظر بمانید</string>
    <string name="version_app">نسخه:</string>
    <string name="cart">سبد خرید</string>
    <string name="account">حساب کاربری</string>
    <string name="home">خانه</string>
    <string name="category">دسته بندی</string>
    <string name="category_title">دسته بندی:</string>
    <string name="search">جستجو</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">بله</string>
    <string name="ok_date">باشه</string>
    <string name="no_date">بیخیال</string>
    <string name="today_date">امروز</string>
    <string name="not_validate_phone_number">شماره موبایل وارد شده درست نیست. شماره باید با ۰۹ شروع شود</string>
    <string name="empty_phone_number">شماره موبایل وارد نشده است. شماره باید با ۰۹ شروع شود</string>
    <string name="not_validate_pay">مبلغ خود را وارد کنید</string>
    <string name="representation">نمایندگی</string>
    <string name="search_in_all_ads">جستجو...</string>
    <string name="metal_cabinet">کابینت فلزی</string>
    <string name="mdf">ام دی اف</string>
    <string name="members">ممبران</string>
    <string name="glass">های گلاس</string>
    <string name="sorting">مرتب سازی</string>
    <string name="filter">فیلتر</string>
    <string name="product_description">توضیحات محصول</string>
    <string name="product_code_title">کد محصول:</string>
    <string name="price_title">قیمت:</string>
    <string name="discount_price_title">قیمت:</string>
    <string name="discounted">تخفیف خورده:</string>
    <string name="free_delivery_from_resellers">تحویل رایگان از نمایندگی ها فروش</string>
    <string name="resellers">نمایندگی های فروش</string>
    <string name="guarantee_the_authenticity_of_the_goods">ضمانت اصالت کالا</string>
    <string name="product_size">اندازه محصول</string>
    <string name="color">رنگ</string>
    <string name="piece">تعداد تکه</string>
    <string name="thickness">ضخامت ورق گالوانیزه</string>
    <string name="aerial_height">ارتفاع هوایی</string>
    <string name="depth_height">عمق هوایی</string>
    <string name="knobs">جنس دستگیره</string>
    <string name="valid_piece">سرویس یا تیکه کاری</string>

    <string name="white">سفید</string>
    <string name="white_duck">سفید دورمشکی</string>
    <string name="pine">کاج</string>
    <string name="shine">شاین</string>
    <string name="light">لایت</string>
    <string name="design">دیزاین</string>
    <string name="carpet">موکتی</string>
    <string name="stone">سنگی</string>
    <string name="dark_stone">سنگی تیره</string>
    <string name="rafia_roshan">رافیا روشن</string>
    <string name="dark_rafia">رافیا تیره</string>
    <string name="gray">آث</string>
    <string name="walnut">گردویی</string>
    <string name="melch">ملچ</string>
    <string name="white_silver">سفید نقره</string>
    <string name="white_silver_gold">سفید نقره(طلایی)</string>
    <string name="piece_value">تکه</string>
    <string name="thickness_value">میل</string>
    <string name="centimeter_value">سانتی متر</string>
    <string name="plastic">پلاستیکی</string>
    <string name="steel">استیل</string>
    <string name="is_a_service">سرویس است</string>
    <string name="is_a_piece_of_work">تیکه کاری است</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="view_product">مشاهده محصول</string>
    <string name="developing">در حال توسعه</string>
    <string name="exit_app">برای خروج از برنامه بازگشت را کلیک کنید</string>
    <string name="all_product">همه ی محصولات</string>

    <string name="ground_height">ارتفاع زمینی</string>
    <string name="ground_depth">عمق زمینی</string>
    <string name="base">جنس پایه</string>
    <string name="aerial_depth">عمق هوایی</string>
    <string name="metal">فلزی</string>
    <string name="screen">جنس صفحه ی کابینت</string>
    <string name="screen_depth">ضخامت صفحه ی کابینت</string>

</resources>